tests/NormalTests/paczka1/small_fuzzy/87275453.err
Error in line 1: eRf5k3NWA S52 79,4
Error in line 9: MkmBAIKzx A843 91,0
Error in line 13: iOpcZaCQ A843 36,6
Error in line 14: iOpcZaCQ S61 93,1
